# colocationpatterns

./: README.md  pyproject.toml
colocationpatterns/: miner.py  sample_data.py
colocationpatterns/.ipynb_checkpoints/: miner-checkpoint.py  sample_data-checkpoint.py
ipynb_notebooks/: dev_colocation_miner_class.ipynb  dev_sample_data_generation.ipynb
ipynb_notebooks/.ipynb_checkpoints/: dev_colocation_miner_class-checkpoint.ipynb  dev_sample_data_generation-checkpoint.ipynb
tests/: test_miner.py  test_sample_data.py
tests/.ipynb_checkpoints/: test_miner-checkpoint.py
